PP-15510 add unit tests for all tasks completed